added insertion operation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=jpa-h2-demo
+
+# No need to give the JDBC driver class name, spring boot will automatically detect it based on the URL
+spring.datasource.url=jdbc:h2:mem:testdb
+# By design, the in-memory database is volatile, and results in data loss after application restart.
+# We can change that behavior by using file-based storage.
+#spring.datasource.url=jdbc:h2:file:/data/demo
+#spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# H2 database has an embedded GUI console for browsing the contents of a database and running SQL queries. By default,
+# the H2 console is not enabled in Spring, to enable it, we need to add the following property
+spring.h2.console.enabled=true
+
+# Logging properties
+# Log level severity mapping
+logging.level.me.ilizin.spring_demo.springboot_demo.jpa_h2_demo=DEBUG
+#Log file name
+logging.file.name=my-log.log
+#logging.level.root=WARN
