use enum, added comment, fix table name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,48 @@
 spring.application.name=jpa-h2-demo
 
-# No need to give the JDBC driver class name, spring boot will automatically detect it based on the URL
+### Data access properties ###
+
 spring.datasource.url=jdbc:h2:mem:testdb
-# By design, the in-memory database is volatile, and results in data loss after application restart.
-# We can change that behavior by using file-based storage.
-#spring.datasource.url=jdbc:h2:file:/data/demo
-#spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+# By design, the in-memory database is volatile, and results in data loss after application restart.
+# We can change that behavior by using file-based storage.
+#spring.datasource.url=jdbc:h2:file:/data/demo
+
+# No need to give the JDBC driver class name, spring boot will automatically detect it based on the URL
+#spring.datasource.driverClassName=org.h2.Driver
+
+# Configure the JPA/Hibernate to auto create the tables
+# Possible values are: none, validate, update, create-drop
+# Spring Boot chooses a default value for you based on whether it thinks your database is embedded (default create-drop) or not (default none).
+# An embedded database is detected by looking at the Connection type: hsqldb, h2 and derby are embedded, the rest are not.
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# The H2 console is implemented as a Jakarta Servlet. You'll always need a servlet container like Tomcat or Jetty to run it.
+# So You need to add Spring Web if you want the H2 console.
+
 # H2 database has an embedded GUI console for browsing the contents of a database and running SQL queries. By default,
 # the H2 console is not enabled in Spring, to enable it, we need to add the following property
 spring.h2.console.enabled=true
+# Path at which the console will be available - http://localhost:8080/h2-console/
+spring.h2.console.path=/h2-console
 
-# Logging properties
+### ##################### ###
+
+### Logging properties ###
+
 # Log level severity mapping
 logging.level.me.ilizin.spring_demo.springboot_demo.jpa_h2_demo=DEBUG
+
 #Log file name
 logging.file.name=my-log.log
+
 #logging.level.root=WARN
+
+# Add logging configs to display SQL statements
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
+
+### ################## ###
