organize the properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
+### Spring core properties ########
+
 spring.application.name=jpa-h2-demo
 
-### Data access properties ###
+###################################
+
+### Data access properties ########
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
@@ -29,9 +33,9 @@ spring.h2.console.enabled=true
 # Path at which the console will be available - http://localhost:8080/h2-console/
 spring.h2.console.path=/h2-console
 
-### ##################### ###
+###################################
 
-### Logging properties ###
+### Logging properties ############
 
 # Log level severity mapping
 logging.level.me.ilizin.spring_demo.springboot_demo.jpa_h2_demo=DEBUG
@@ -45,4 +49,4 @@ logging.file.name=my-log.log
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.orm.jdbc.bind=trace
 
-### ################## ###
+###################################
